[project]
name = "ComfyUI_ReduxEmbedToolkit"
description = 'Custom nodes for managing, saving and loading of T5XXL and Redux/Style based embeddings.'
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI_ReduxEmbedToolkit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "Redux & T5XXL Embed Toolkit"
Icon = ""
