[project]
name = "ComfyUI_CondsUtils"
description = 'Custom nodes for modifying, saving and loading of various conditionings.'
version = "0.0.4"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI_CondsUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "WIP Conditioning Toolkit"
Icon = ""
